--- a/plugin.xml
+++ b/plugin.xml
@@ -59,7 +59,8 @@
                  <source url="https://github.com/CocoaPods/Specs.git"/>		
              </config>		
              <pods use-frameworks="true">		
-                 <pod name="AssetsPickerViewController" spec="~> 2.0" />		
+                 <pod name="AssetsPickerViewController" spec="~> 2.0" />
+                 <pod name="SnapKit" spec="5.6.0" />
              </pods>		
          </podspec>
     </platform>
